--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit==1.28.0
-faster-whisper==0.10.0
-torch==2.1.0
-torchaudio==2.1.0
-ctranslate2==3.20.0
+streamlit>=1.28.0
+faster-whisper>=0.10.0
+torch>=2.0.0,<2.5.0
+torchaudio>=2.0.0,<2.5.0
+ctranslate2>=3.20.0
