--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 streamlit>=1.28.0
-faster-whisper>=0.10.0
-torch>=2.0.0,<2.5.0
-torchaudio>=2.0.0,<2.5.0
-ctranslate2>=3.20.0
+faster-whisper==1.0.3
+torch>=2.1.1 
+torchaudio>=2.1.1
+click
+ctranslate2==4.4.0
